Fixed element editor dialog z-index.

--- a/src/Orchard.Web/Modules/Orchard.Layouts/Styles/dialog.css
+++ b/src/Orchard.Web/Modules/Orchard.Layouts/Styles/dialog.css
@@ -9,7 +9,7 @@
         top: 0;
         bottom: 0;
         background: url('overlay.png');
-        z-index: 500;
+        z-index: 2000;
         /* Restore styles inherited from media-library-picker-admin.css when a media picker field is rendered. */
         -ms-opacity: inherit;
         opacity: inherit;
